# advent-of-code

2022/ocaml/: aoc_2022.opam  dune-project
2022/python/: pyproject.toml
2022/python/aoc_2022/: day01.py
2022/python/tests/: test_day01.py
2023/ocaml/lib/: advent.ml
