[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Loïc Pinsard <muream@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
advent-of-code-data = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
